--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-middleman",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.3.0"
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-requirejs": "^3.2.0"
   }
 }
