--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server",
-  "scripts": {},
+  "scripts": {
+    "start": "http-server client"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VictorWinberg/api-middleman.git"
@@ -19,6 +21,7 @@
     "express": "^4.16.4",
     "form-data": "^2.3.3",
     "lodash": "^4.17.11",
+    "multer": "^1.4.1",
     "node-fetch": "^2.3.0",
     "object-to-formdata": "^1.5.2"
   },
@@ -26,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-requirejs": "^3.2.0"
+    "eslint-plugin-requirejs": "^3.2.0",
+    "http-server": "^0.11.1"
   }
 }
